--- a/public/css/owl-carousel-2-public.css
+++ b/public/css/owl-carousel-2-public.css
@@ -1,6 +1,5 @@
 /**
- * All of the CSS for your public-facing functionality should be
- * included in this file.
+ * Duck Diver Owl Carousel Public CSS
  */
 .owl-wrapper {
     width: 100%;
@@ -16,4 +15,22 @@
 }
 .owl-wrapper .item {
     max-width: 100%;   
+}
+
+.owl-theme.nav-centered .owl-nav {
+    margin-top: 0;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 100%;
+}
+.owl-theme.nav-centered .owl-nav button.owl-next, .owl-theme.nav-centered .owl-nav button.owl-prev {
+    position: absolute;
+}
+.owl-theme.nav-centered .owl-nav button.owl-next {
+    right: -2ch;
+}
+
+.owl-theme.nav-centered .owl-nav button.owl-prev {
+    left: -2ch;
 }
